--- a/TrackTogetherApp/package.json
+++ b/TrackTogetherApp/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "expo-splash-screen": "~0.29.22"
+    "expo-splash-screen": "~0.29.22",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
